Completed enrollment. Added 4 other APIs
