# api/swagger/swagger.yaml
@@ -31,7 +31,7 @@ paths:
   /enroll:
     x-swagger-router-controller: enroll
     post:
-      description: Start enforllment for a new team
+      description: Start enrollment for a new team
       operationId: initEnrollment
       parameters:
         - name: initEnrollment
@@ -70,10 +70,126 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /monitoring:
+    x-swagger-router-controller: monitoring
+    post:
+      description: Push update on local system status. Data older than 5 minutes will be considered stale.
+      operationId: pushUpdate
+      parameters:
+        - name: updateStatus
+          in: body
+          description: Update object generated from the local monitor containing microservices status
+          required: true
+          schema:
+            $ref: "#/definitions/MicroservicesStatus"
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/HealthProbeResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    get:
+      description: Get local system status.
+      operationId: getStatus
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/MicroservicesStatus"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /opschat:
+    x-swagger-router-controller: opschat
+    post:
+      description: Publish a new chat message.
+      operationId: publishMessage
+      parameters:
+        - name: message
+          in: body
+          description: Message that needs to be published
+          required: true
+          schema:
+            $ref: "#/definitions/OpsChatMessage"
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/HealthProbeResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /opschat/{pageId}:
+    x-swagger-router-controller: opschat
+    get:
+      description: Get local system status.
+      operationId: getPublishedMessages
+      parameters:
+        - name: pageId
+          in: path
+          description: Numeric ID of the message page in which the caller it is interested
+          required: true
+          type: integer
+          format: int32
+          maximum: 10
+          minimum: 0
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/OpsChatMessageArray"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
+  OpsChatMessageArray:
+    required:
+      - messages
+    properties:
+      messages:
+        type: array
+        items:
+          $ref: "#/definitions/OpsChatMessage"
+  OpsChatMessage:
+    required:
+      - from
+      - message
+    properties:
+      from:
+        type: string
+      message:
+        type: string
+      timestamp:
+        type: string
+        format: date-time
+  MicroservicesStatus:
+    required:
+      - microservices
+    properties:
+      microservices:
+        type: array
+        items:
+          type: object
+          required:
+            - name
+            - status
+          properties:
+            name:
+              type: string
+            status:
+              type: boolean
+            timestamp:
+              type: string
+              format: date-time
   InitEnrollmentRequest:
     required:
       - teamName
